
New features:
..F....... [ZBX-8275] added a feature to automatically clone web scenarios when cloning a host or template (Ivo)
A.......S. [ZBX-8473] improved performance of deleting triggers by API and server - events will be deleted only by the housekeeper (Krists, Sasha)
A.F....... [ZBX-1357] updated Japanese, Polish and Spanish translations; thanks to Zabbix translators (Richlv)

Bug fixes:
........S. [ZBX-8444] increased the interval for checking sleeping escalations to improve performance (igors)
..F....PS. [ZBX-8608] added support of IP masks for action conditions (Sasha)
A......... [ZBX-8603] fixed web scenario fields "http_proxy" and "retries" not updating properly when linking template to host (Ivo)
........S. [ZBX-8415] fixed possible server crash on lld hosts or host groups update (dimir,Sasha)
...G...... [ZBX-8236] fixed few memory leaks in Windows agent (wiper)
A......... [ZBX-8563] added field "logtimefmt" to exported items (Krists)
.......PS. [ZBX-7621] changed virtual machine disk and network discovery to use device name instead of instance id in discovered item name (wiper)
.......PS. [ZBX-8338] fixed SNMP walking code so that it intelligently chooses either a string or numeric representation for an OID index (asaveljevs)
..F....... [ZBX-8577] added wmi.get[] to the list of suggested items (asaveljevs)
..F....... [ZBX-8216] fixed screen import error (Andrejs)
A.F....... [ZBX-8510] fixed possible deadlocks when updating IT services (Pavels, Sasha)
...G...... [ZBX-8512] fixed processing of web.page.regexp without a newline character in the end of http GET response (Arturs)
A......... [ZBX-8424] fixed finding last event for triggers (Ivo)
.......PS. [ZBX-8424] changed range limit when looking up eventids to the upper bound of a 64bit integer (Juris)
A......... [ZBX-8493] fixed usergroup.massadd API call to not create duplicate entries in "rights" table (Krists)